packages/typ/tests/fixtures/diagnostics/0867_gadt_witness_annotation_mismatch_01.ml
type _ witness_alpha =
  | WInt_alpha : int witness_alpha
  | WBool_alpha : bool witness_alpha

let _ : bool witness_alpha = WInt_alpha
